integration_tests/codegen_fail/fail/input-object/derive_unique_name.stderr
warning: field is never read: `enum_path`
   --> $DIR/mod.rs:282:5
    |
282 |     pub enum_path: Option<TokenStream>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field is never read: `span`
   --> $DIR/mod.rs:296:5
    |
296 |     pub span: Span,
    |     ^^^^^^^^^^^^^^

warning: 2 warnings emitted

error: GraphQL input object does not allow fields with the same name
 --> $DIR/derive_unique_name.rs:4:5
  |
4 | /     #[graphql(name = "test")]
5 | |     test2: String,
  | |_________________^
  |
  = help: There is at least one other field with the same name `test`, possibly renamed via the #[graphql] attribute
  = note: https://spec.graphql.org/June2018/#sec-Input-Objects
